# P-Gates

./: .gitignore  AGENTS.md  README.md  requirements.txt
.github/workflows/: tests.yml
PAL Package/: A0_Boundary_Kernel_v0.8.2 (1).docx  README_PAL_PECAN_PEA_Corpus.txt.txt
app/: __init__.py  config.py  main.py  mock_provider.py  provider_diagnostics.py  providers.py  schemas.py
app/static/: app.js  index.html  styles.css
diagnostics/: p-gates-first-live-report.json  p-gates-first-live-report.md  run_first_live_report.py  run_live_provider_diagnostic.py
framework/: manifest.json
framework/mvp/: pal.md  pea.md  pecan.md  seed.md
prototypes/a0-zsa-kernel/: DESIGN.md  README.md  pyproject.toml
prototypes/a0-zsa-kernel/examples/: invalid_binary_float.json  malformed_packet.json  valid_candidate_weighting.json  valid_commit.json  valid_profile_expiry.json
prototypes/a0-zsa-kernel/reference/: authority-boundaries.json  status-ladder.json  transition-rules.json
prototypes/a0-zsa-kernel/src/a0_zsa_kernel/: __init__.py  canonical.py  cli.py  engine.py  enums.py  models.py  receipts.py  rules.py  transitions.py
prototypes/a0-zsa-kernel/tests/: conftest.py  test_adversarial.py  test_anti_backflow.py  test_authority.py  test_deterministic_replay.py  test_expiry_and_reopening.py  test_malformed_inputs.py  test_receipts.py  test_status_ladder.py  test_transitions.py
tests/: test_api.py  test_live_diagnostic_runner.py  test_provider_diagnostics.py  test_providers.py
