[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "a0-zsa-kernel-prototype"
version = "0.1.0"
description = "Isolated, local A0 Boundary Kernel transition prototype"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.13,<3"]

[project.optional-dependencies]
test = ["pytest>=8,<9"]

[project.scripts]
a0-zsa-kernel = "a0_zsa_kernel.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
